--- a/MobiV/app/views/layouts/_messages.html.erb
+++ b/MobiV/app/views/layouts/_messages.html.erb
@@ -3,6 +3,10 @@
     <a href="#" data-dismiss="alert" class="close">×</a>
        Welcome <a href="users/edit"><%= current_user.email %></a>
        <label>, your last login was on <b><%= current_user.last_login.strftime("%d-%m-%Y") %></b>.</label>
+       <% if(@orderNumber > 0) %>
        <label>Click on your last order <a href="orders/<%= @orderNumber %>"># <%= @orderNumber %> </a>to see the details.</label>
+       <% else %>
+        <label>You don't have any order yet.</label>
+       <% end %>
   </div>
 <% end %>
