--- a/MobiV/app/views/layouts/application.html.erb
+++ b/MobiV/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
             <li class="nav-item"><%= link_to 'Edit Profile', edit_user_registration_path, class: 'nav-link' %></li>
             <li class="nav-item"><%= link_to 'Sign out', destroy_user_session_path, :method => :delete, class: 'nav-link' %></li>
             <li class="nav-item">
-              <a href="/admin" class="nav-link">
+              <a class="nav-link">
                 <i class="fa fa-shopping-cart"> &euro; <%=  session[:total_cart_price]  %></i> (<%= session[:total_items] %>)
               </a>               
             </li>
