--- a/MobiV/app/views/main/home.html.erb
+++ b/MobiV/app/views/main/home.html.erb
@@ -3,45 +3,40 @@
 <% if user_signed_in? %>
 <%= render 'layouts/messages' %>
 <% end %>
-
 <div class="container-fluid">
     <div class="row home-section-height main-picture align-items-end">        
-            <div class="text-center home-main-btn">
-                <div class="home-main-header">
-                    <h1>Freedom of Movement</h1>
-                </div>
-                <div>               
-                    <a href="/shop" class="btn btn-dark btn-lg">Shop Now</a>
-                </div>
-            </div>                   
+       <div class="text-center home-main-btn">
+            <div class="home-main-header">
+                <h1>Freedom of Movement</h1>
+            </div>
+            <div>               
+                <a href="/shop" class="btn btn-dark btn-lg">Shop Now</a>
+            </div>
+        </div>                   
     </div>
     <div class="row home-section-height align-items-center">       
-            <div class="home-section-box">
-                <div class="my-3 p-3 float-right">
-                    <img src="/assets/home1.jpg" class="img-fluid" alt="This is an image">
-                </div>
+       <div class="home-section-box">
+            <div class="my-3 p-3 float-right">
+                <img src="/assets/home1.jpg" class="img-fluid" alt="This is an image">
             </div>
-            <div class=" home-section-box">
-                <div class="my-3 p-3 float-left home-section-one">
-                    <h2>Design, Artistry and Engineering.</h2>
-                    <p>How to Build a superior scooter.</p>
-                </div>
+        </div>
+        <div class=" home-section-box">
+            <div class="my-3 p-3 float-left home-section-one">
+                <h2>Engineering and Design.</h2>                    
             </div>
+        </div>
     </div>
     <div class="row home-section-height align-items-center">       
-            <div class="home-section-box">
-                <div class="my-3 p-3 float-right home-section-two">
-                    <h2>Money, Time and Joy.</h2>
-                    <p>Could you use more of any of those? Unagi wipes out your Uber/Lyft/Lime/Bird costs, 
-                    reduces travel time, and adds the thrill of the ride to every trip. But maybe you're already goo.
-                    </p>
-                </div>
-            </div>        
-            <div class="home-section-box">
-                <div class="my-3 p-3 float-left">
-                     <img src="/assets/home2.jpg" class="img-fluid" alt="This is an image">
-                </div>
-            </div>        
+        <div class="home-section-box">
+            <div class="my-3 p-3 float-right home-section-two">
+                <h2>Enjoy your Time.</h2>                    
+            </div>
+        </div>        
+        <div class="home-section-box">
+            <div class="my-3 p-3 float-left">
+                <img src="/assets/home2.jpg" class="img-fluid" alt="This is an image">
+             </div>
+         </div>        
     </div>
     <div class="row home-section-height line-home-section">
         <div class=" col grey-color-section text-center">
@@ -50,20 +45,19 @@
         </div>
     </div>
     <div class="row home-section-height">
-                <div class="pt-md-5 px-md-5 text-center home-section-say-header">
-                   <h2>What people say about us</h2>
-                </div>
-                <div class="pt-md-5 px-md-5 text-center home-section-say-header">
-                    <div class="my-3 p-3 home-section-say-message">
-                        <p>The electric scooter you won't want to share with anyone.</p>
-                    </div>
-                    <div class="my-3 p-3 home-section-say-message">
-                        <p>No other scooter compares in terms of build quality.</p>
-                    </div>
-                    <div class="my-3 p-3 home-section-say-message">
-                        <p>Scooters are a mix of design and power.</p>
-                    </div>
-                </div>                   
+        <div class="pt-md-5 px-md-5 text-center home-section-say-header">
+            <h2>What people say about us</h2>
+        </div>
+        <div class="pt-md-5 px-md-5 text-center home-section-say-header">
+            <div class="my-3 p-3 home-section-say-message">
+                <p>The electric scooter you won't want to share with anyone.</p>
+            </div>
+        <div class="my-3 p-3 home-section-say-message">
+            <p>No other scooter compares in terms of build quality.</p>
+        </div>
+        <div class="my-3 p-3 home-section-say-message">
+            <p>Scooters are a mix of design and power.</p>
+        </div>                  
     </div>   
 </div>   
 
