--- a/MobiV/app/views/cart/createOrder.html.erb
+++ b/MobiV/app/views/cart/createOrder.html.erb
@@ -1,56 +1,40 @@
 <% provide(:title, "Checkout") %>
 
 <div class="container">
-<div id="itemsContainer">
-    <h1>Thank You<br>
-You have just placed an order #<%= @order.id %></h1>
-</div>
-
-
-   
-    
-    
-<table id="customers">
-     <% @total = 0 %>
+  <div id="itemsContainer">
+    <h1>Thank You<br>You have just placed an order #<%= @order.id %></h1>
+  </div>  
+  <table id="customers">
+    <% @total = 0 %>
     <% @orderitems.each do |id,quantity| %>
       <tr>
-        <% item = Orderitem.find_by_id(id) %>
-       
+        <% item = Orderitem.find_by_id(id) %>       
         <td><%= item.title %></td>
         <td><%= item.quantity %></td>
-       <td><%=number_to_currency(item.price, :unit => "€")%></td> 
-      
-       </tr>
-       
+        <td><%=number_to_currency(item.price, :unit => "€")%></td>       
+      </tr>       
        <% timx = (item.quantity * item.price)%>   
        <% @total += timx %>
        <% session[:total_cart_price] = @total %>
       </tr>
-    <% end %>
-    
-    
-    <tr>
-        
-       <td>Order Total: &euro; <%= @total %></td>
-       
-      <% shipping = 30 %>
-      <% @overall = shipping + @total%>
+    <% end %>   
+      <tr>        
+        <td>Order Total: &euro; <%= @total %></td>       
+        <% shipping = 30 %>
+        <% @overall = shipping + @total%>
       <tr>
-          <td>Shipping &euro;30</td>
-          <td>You Pay &euro; <%= @overall %></td>
+        <td>Shipping &euro;30</td>
+        <td>You Pay &euro; <%= @overall %></td>
+      </tr>       
       </tr>
-
-       
-      </tr>
-</table>
-<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
-<input type="hidden" name="cmd" value="_xclick">
-<input type="hidden" name="business" value="sb-t47tgt1415375@business.example.com">
-<input type="hidden" name="item_name" value="Mobiv <%= @order.id %>">
-<input type="hidden" name="currency_code" value="EUR">
-<input type="hidden" name="amount" value="<%= @overall %>">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
-<input type="hidden" name="return" value="https://rails-container-liamme.c9users.io/" >
-</form>
-
+  </table>
+  <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
+    <input type="hidden" name="cmd" value="_xclick">
+    <input type="hidden" name="business" value="sb-t47tgt1415375@business.example.com">
+    <input type="hidden" name="item_name" value="Mobiv <%= @order.id %>">
+    <input type="hidden" name="currency_code" value="EUR">
+    <input type="hidden" name="amount" value="<%= @overall %>">
+    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
+    <input type="hidden" name="return" value="https://agile-scrubland-91420.herokuapp.com/"> 
+  </form>
 </div>
