--- a/MobiV/app/views/products/show.html.erb
+++ b/MobiV/app/views/products/show.html.erb
@@ -18,7 +18,7 @@
     </div>    
     <div class="col col-lg-4">
       <h2><%= @product.title %></h2>
-      <h6>$ <%= @product.price %></h6>
+      <h6><%= number_to_currency(@product.price, :unit => "€")  %></h6>
       <% if user_signed_in? %> 
         <a href="/cart/<%= @product.id %>" class="btn btn-dark">Add To Cart</a>
       <% end %>
@@ -31,13 +31,12 @@
     <div class="col mt-3">
       <p><strong>Description:</strong></p>
       <div class="border-bottom"></div>
-      <div class="mt-3">
-      <p><%= @product.description %>
-      </div>
-      </p>
+        <div class="mt-3">
+          <p><%= @product.description %></p>
+        </div>      
     </div>
   </div>
-  <div class="row">
+  <div class="row mb-3">
     <div class="col">
       <%= link_to 'Back', products_path, class: 'btn btn-dark' %>    
     </div>
