--- a/MobiV/app/views/cart/createOrder.html.erb
+++ b/MobiV/app/views/cart/createOrder.html.erb
@@ -35,6 +35,6 @@
     <input type="hidden" name="currency_code" value="EUR">
     <input type="hidden" name="amount" value="<%= @overall %>">
     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
-    <input type="hidden" name="return" value="https://agile-scrubland-91420.herokuapp.com/"> 
+    <input type="hidden" name="return" value="https://agile-scrubland-91420.herokuapp.com/thankyou"> 
   </form>
 </div>
