--- a/MobiV/app/views/main/contact.html.erb
+++ b/MobiV/app/views/main/contact.html.erb
@@ -2,99 +2,100 @@
 
 <!-- Section: Contact v.1 -->
 <div class="container">
-<section class="my-5">
+    <section class="my-5">
+        <div class="jumbotron jumbotron-fluid">
+            <!-- Section heading -->
+            <h1 class="display-4">We're here to help</h2>
+                <!-- Section description -->
+                <p class="lead">If you experience any technical issues, please contact your MobiV
+                    retailer or visit your nearest MobiV service point. Still have questions? Fill in the contact form
+                    below and we
+                    will get back to you.</p>
 
-    <!-- Section heading -->
-    <h2 class="h1-responsive font-weight-bold text-center my-5">We're here to help</h2>
-    <!-- Section description -->
-    <h5 class="h5-responsive font-weight-bold text-center my-5">Customer service</h5>
-    <p class="text-center w-responsive mx-auto pb-4">If you experience any technical issues, please contact your Segway
-        retailer or visit your nearest Segway service point. Still have questions? Fill in the contact form below and we
-        will get back to you.</p>
+                <h5 class="display-5">Careers</h5>
+                <p class="lead">Send you CV to <a href="mailto: careers@mobiV.com">careers@mobiV.com</a> for a list of
+                    current employment opportunities.</p>
+        </div>
+        <!-- Grid row -->
+        <div class="row">
 
-    <h5 class="h5-responsive font-weight-bold text-center my-4">Careers</h5>
-    <p class="text-center w-responsive mx-auto pb-5">Send you CV to <a
-            href="mailto: careers@mobiV.com">careers@mobiV.com</a> for a list of current employment opportunities.</p>
+            <!-- Grid column -->
+            <div class="col-lg-5 mb-lg-0 mb-4">
+                <form action="https://formspree.io/xzbpqqbj" method="POST">
+                    <!-- Form with header -->
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- Header -->
+                            <div class="form-header blue accent-1">
+                                <h3 class="mt-2"><i class="fas fa-envelope"></i> Write to us:</h3>
+                            </div>
+                            <p class="dark-grey-text">We'll write rarely, but only the best content.</p>
+                            <!-- Body -->
+                            <div class="md-form">
+                                <i class="fas fa-envelope prefix grey-text"></i>&nbsp;<label for="form-email">Your
+                                    email</label>
+                                <input type="text" name="_replyto" class="form-control">
 
-       <!-- Grid row -->
-    <div class="row">
+                            </div>
+                            <div class="md-form">
+                                <i class="fas fa-pencil-alt prefix grey-text"></i>&nbsp;<label for="form-text">Your
+                                    message</label>
+                                <textarea id="message" name="message" class="form-control md-textarea"
+                                    rows="3"></textarea>
 
-        <!-- Grid column -->
-        <div class="col-lg-5 mb-lg-0 mb-4">
-            <form action="https://formspree.io/xzbpqqbj" method="POST">
+                            </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary"> Submit</button>
+                            </div>
+                            <div class="status"></div>
+                        </div>
+                    </div>
+                </form>
                 <!-- Form with header -->
-                <div class="card">
-                    <div class="card-body">
-                        <!-- Header -->
-                        <div class="form-header blue accent-1">
-                            <h3 class="mt-2"><i class="fas fa-envelope"></i> Write to us:</h3>
-                        </div>
-                        <p class="dark-grey-text">We'll write rarely, but only the best content.</p>
-                        <!-- Body -->
-                        <div class="md-form">
-                            <i class="fas fa-envelope prefix grey-text"></i>&nbsp;<label for="form-email">Your
-                                email</label>
-                            <input type="text" name="_replyto" class="form-control">
 
-                        </div>
-                        <div class="md-form">
-                            <i class="fas fa-pencil-alt prefix grey-text"></i>&nbsp;<label for="form-text">Your
-                                message</label>
-                            <textarea id="message" name="message" class="form-control md-textarea" rows="3"></textarea>
+            </div>
+            <!-- Grid column -->
 
-                        </div>
-                        <div class="text-center">
-                            <button type="submit" class="btn btn-primary"> Submit</button>
-                        </div>
-                        <div class="status"></div>
+            <!-- Grid column -->
+            <div class="col-lg-7">
+
+                <!--Google map-->
+                <div id="map-container-section" class="z-depth-1-half map-container-section mb-4" style="height: 400px">
+                    <iframe src="https://maps.google.com/maps?q=IFSC&t=&z=15&ie=UTF8&iwloc=&output=embed"
+                        frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
+                <!-- Buttons-->
+                <div class="row text-center">
+                    <div class="col-md-4">
+                        <a class="btn-floating blue accent-1">
+                            <i class="fas fa-map-marker-alt"></i>
+                        </a>
+                        <p>123A IFSC</p>
+                        <p class="mb-md-0">Ireland</p>
+                    </div>
+                    <div class="col-md-4">
+                        <a class="btn-floating blue accent-1">
+                            <i class="fas fa-phone"></i>
+                        </a>
+                        <p>+353 1 234 5678</p>
+                        <p class="mb-md-0">Mon - Fri, 8:00-17:00</p>
+                    </div>
+                    <div class="col-md-4">
+                        <a class="btn-floating blue accent-1">
+                            <i class="fas fa-envelope"></i>
+                        </a>
+                        <p>info@mobiV.com</p>
+                        <p class="mb-0">sale@mobiV.com</p>
                     </div>
                 </div>
-            </form>
-            <!-- Form with header -->
+
+            </div>
+            <!-- Grid column -->
 
         </div>
-        <!-- Grid column -->
+        <!-- Grid row -->
 
-        <!-- Grid column -->
-        <div class="col-lg-7">
-
-            <!--Google map-->
-            <div id="map-container-section" class="z-depth-1-half map-container-section mb-4" style="height: 400px">
-                <iframe src="https://maps.google.com/maps?q=IFSC&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0"
-                    style="border:0" allowfullscreen></iframe>
-            </div>
-            <!-- Buttons-->
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <a class="btn-floating blue accent-1">
-                        <i class="fas fa-map-marker-alt"></i>
-                    </a>
-                    <p>123A IFSC</p>
-                    <p class="mb-md-0">Ireland</p>
-                </div>
-                <div class="col-md-4">
-                    <a class="btn-floating blue accent-1">
-                        <i class="fas fa-phone"></i>
-                    </a>
-                    <p>+353 1 234 5678</p>
-                    <p class="mb-md-0">Mon - Fri, 8:00-17:00</p>
-                </div>
-                <div class="col-md-4">
-                    <a class="btn-floating blue accent-1">
-                        <i class="fas fa-envelope"></i>
-                    </a>
-                    <p>info@mobiV.com</p>
-                    <p class="mb-0">sale@mobiV.com</p>
-                </div>
-            </div>
-
-        </div>
-        <!-- Grid column -->
-
-    </div>
-    <!-- Grid row -->
-
-</section>
-<!-- Section: Contact v.1 -->
-<!--Section: Contact v.2-->
+    </section>
+    <!-- Section: Contact v.1 -->
+    <!--Section: Contact v.2-->
 </div>
