--- a/MobiV/app/views/main/thankyou.html.erb
+++ b/MobiV/app/views/main/thankyou.html.erb
@@ -1,4 +1,6 @@
+  <% provide(:title, "Thank You") %>
   <div class="container">
+      <section class="my-5">
       <div class="jumbotron jumbotron-fluid">
           <div class="container">
               <h1 class="display-4">Payment successful!</h1>
@@ -6,4 +8,5 @@
               <%= link_to "Retrun to home", "/" %>
           </div>
       </div>
+      </section>
   </div>
