--- a/MobiV/app/views/layouts/_messages.html.erb
+++ b/MobiV/app/views/layouts/_messages.html.erb
@@ -2,7 +2,9 @@
   <div class="alert alert alert-success id="welcome-message" role="alert" alert-<%= key %>">
     <a href="#" data-dismiss="alert" class="close">×</a>
        Welcome <a href="users/edit"><%= current_user.email %></a>
+       <% if user_signed_in? && current_user.last_login != nil %> 
        <label>, your last login was on <b><%= current_user.last_login.strftime("%d-%m-%Y") %></b>.</label>
+       <% end %>
        <% if(@orderNumber > 0) %>
        <label>Click on your last order <a href="orders/<%= @orderNumber %>"># <%= @orderNumber %> </a>to see the details.</label>
        <% else %>
