--- a/MobiV/app/views/layouts/application.html.erb
+++ b/MobiV/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
             <li class="nav-item">
               <%= link_to "Contact", contact_path, class: 'nav-link' %>
             </li>
-            <% if user_signed_in? %>
+            <% if user_signed_in? && current_user.admin == true %>
             <li class="nav-item">
               <a href="/admin" class="nav-link">Admin Panel</a>
             </li>
