--- a/MobiV/app/views/products/index.html.erb
+++ b/MobiV/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     <h1>Products</h1>
-    <% if session[:login] == 1 %>
+    <% if current_user.admin == true %>
       <%= link_to 'New Product', new_product_path %>
     <% end %>
   </div>
@@ -20,7 +20,7 @@
                 <h5 class="card-title"><%= product.title %></h5>
                 <p class="card-text limit-text-products"><%= product.description %></p>
                 <%= link_to 'Show', product, class: 'btn btn-dark' %>
-                <% if session[:login] == 1 %> 
+                <% if current_user.admin == true %> 
                   <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-dark' %>
                   <%= link_to 'Destroy', product, class: 'btn btn-dark', method: :delete, data: { confirm: 'Are you sure?' } %>
                 <% end %>
