--- a/MobiV/app/views/products/search.html.erb
+++ b/MobiV/app/views/products/search.html.erb
@@ -1,7 +1,8 @@
 
-<div class="container h-100 mt-3">
-  <div class="row h-100 justify-content-center align-items-center">   
-    <div class="col-10 col-md-8 col-lg-8 mt-3"> 
+<% provide(:title, "Search") %>
+<div class="containermt-3">
+  <div class="row justify-content-center align-items-center">   
+    <div class="col-10 col-md-8 col-lg-8 mt-3 mb-3"> 
       <h2>You Searched Our Product Catalog For <%= @search_term %></h2>
       <% if @products.length == 0  %>
       <br />
