--- a/MobiV/app/views/main/home.html.erb
+++ b/MobiV/app/views/main/home.html.erb
@@ -4,39 +4,39 @@
 <%= render 'layouts/messages' %>
 <% end %>
 <div class="container-fluid">
-    <div class="row home-section-height main-picture align-items-end">        
-       <div class="text-center home-main-btn">
+    <div class="row home-section-height main-picture align-items-center">
+        <div class="text-center home-main-btn ">
             <div class="home-main-header">
                 <h1>Freedom of Movement</h1>
             </div>
-            <div>               
+            <div>
                 <a href="/shop" class="btn btn-dark btn-lg">Shop Now</a>
             </div>
-        </div>                   
+        </div>
     </div>
-    <div class="row home-section-height align-items-center">       
-       <div class="home-section-box">
+    <div class="row home-section-height align-items-center">
+        <div class="home-section-box">
             <div class="my-3 p-3 float-right">
                 <img src="/assets/home1.jpg" class="img-fluid" alt="This is an image">
             </div>
         </div>
         <div class=" home-section-box">
             <div class="my-3 p-3 float-left home-section-one">
-                <h2>Engineering and Design.</h2>                    
+                <h2>Engineering and Design.</h2>
             </div>
         </div>
     </div>
-    <div class="row home-section-height align-items-center">       
+    <div class="row home-section-height align-items-center">
         <div class="home-section-box">
             <div class="my-3 p-3 float-right home-section-two">
-                <h2>Enjoy your Time.</h2>                    
+                <h2>Enjoy your Time.</h2>
             </div>
-        </div>        
+        </div>
         <div class="home-section-box">
             <div class="my-3 p-3 float-left">
                 <img src="/assets/home2.jpg" class="img-fluid" alt="This is an image">
-             </div>
-         </div>        
+            </div>
+        </div>
     </div>
     <div class="row home-section-height line-home-section">
         <div class=" col grey-color-section text-center">
@@ -50,15 +50,29 @@
         </div>
         <div class="pt-md-5 px-md-5 text-center home-section-say-header">
             <div class="my-3 p-3 home-section-say-message">
-                <p>The electric scooter you won't want to share with anyone.</p>
+                <img src="/assets/John Wick.JPG" class="rounded-circle" alt="John Wick" width="150" height="150">
+                <blockquote class="blockquote text-center">
+                    <p class="mb-0">The electric scooter you won't want to share with anyone.</p>
+                    <footer class="blockquote-footer">John Wick</cite>
+                    </footer>
+                </blockquote>
             </div>
-        <div class="my-3 p-3 home-section-say-message">
-            <p>No other scooter compares in terms of build quality.</p>
+            <div class="my-3 p-3 home-section-say-message">
+                <img src="/assets/MaggieQ.JPG" class="rounded-circle" alt="MaggieQ" width="150" height="150">
+                <blockquote class="blockquote text-center">
+                    <p class="mb-0">o other scooter compares in terms of build quality.</p>
+                    <footer class="blockquote-footer">Maggie Q</cite>
+                    </footer>
+                </blockquote>
+
+            </div>
+            <div class="my-3 p-3 home-section-say-message">
+                <img src="/assets/Sofia.JPG" class="rounded-circle" alt="Sofia" width="150" height="150">
+                <blockquote class="blockquote text-center">
+                    <p class="mb-0">Scooters are a mix of design and power.</p>
+                    <footer class="blockquote-footer">Sofia</cite>
+                    </footer>
+                </blockquote>
+            </div>
         </div>
-        <div class="my-3 p-3 home-section-say-message">
-            <p>Scooters are a mix of design and power.</p>
-        </div>                  
-    </div>   
-</div>   
-
-
+    </div>
