--- a/MobiV/app/views/main/shop.html.erb
+++ b/MobiV/app/views/main/shop.html.erb
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col align-self-center pt-md-5 px-md-5 text-center">
                     <div class="my-3 p-3">
-                        <h2 class="display-5">Scooters</h2>
+                        <h2 class="display-5" id="scooters">Scooters</h2>
                         <p class="lead">subheader</p>
                     </div>                
                 </div>
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col align-self-center pt-md-5 px-md-5 text-center">
                     <div class="my-3 p-3">
-                        <h2 class="display-5">Accessories</h2>
+                        <h2 class="display-5" id="accessories">Accessories</h2>
                         <p class="lead">subheader accessories</p>
                     </div>                
                 </div>
