--- a/MobiV/app/views/layouts/application.html.erb
+++ b/MobiV/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
   <body class="d-flex flex-column h-100">  
     <%# Navbar %>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="/">MobiV</a>     
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -76,23 +76,17 @@
         <div class="col-6 col-md">
           <h5>Products</h5>
           <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Scooter</a></li>
-            <li><a class="text-muted" href="#">Accesories</a></li>       
+            <li><a class="text-muted" href="/shop#scooters">Scooter</a></li>
+            <li><a class="text-muted" href="/shop#accessories">Accesories</a></li>       
           </ul>
         </div>
         <div class="col-6 col-md">
-          <h5>About</h5>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">About 1</a></li>
-            <li><a class="text-muted" href="#">About 2</a></li>
-          </ul>
+          <h5><a class="text-muted" href="/about">About</a></h5>
+
         </div>
         <div class="col-6 col-md">
-          <h5>Contact</h5>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">contact 1</a></li>
-            <li><a class="text-muted" href="#">contact 2</a></li>
-          </ul>
+          <h5><a class="text-muted" href="/contact">Contact</a></h5>
+
         </div>
         <div class="col footer-social">
           <ul class="list-unstyled">
