--- a/MobiV/app/views/main/about.html.erb
+++ b/MobiV/app/views/main/about.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "About") %>
 
-<div class="container">
-	<div class="row ">
+<div class="container mt-3 mb-3">
+	<div class="row">
 		<div class="col">
 			<h1>We Believe</h1>
 			<p>Technology has made it infinitely easier to communicate and far more difficult to connect—with the
@@ -14,7 +14,7 @@
 		</div>
 	</div>
 </div>
-<div class="container">
+<div class="container mt-3 mb-3">
 	<div class="row">
 		<div class="col">
 			<%= image_tag "about02.jpg" %>
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 </div>
-<div class="container">
+<div class="container mt-3 mb-3">
 	<div class="row">
 		<div class="col">
 			<h1>How We Do It</h1>
