--- a/MobiV/app/views/main/home.html.erb
+++ b/MobiV/app/views/main/home.html.erb
@@ -44,8 +44,8 @@
                 performance and ease-of-use.</p>
         </div>
     </div>
-    <div class="row home-section-height">
-        <div class="pt-md-5 px-md-5 text-center home-section-say-header">
+    <div class="row home-section-height mb-3">
+        <div class="mt-3 text-center home-section-say-header">
             <h2>What people say about us</h2>
         </div>
         <div class="pt-md-5 px-md-5 text-center home-section-say-header">
@@ -64,7 +64,6 @@
                     <footer class="blockquote-footer">Maggie Q</cite>
                     </footer>
                 </blockquote>
-
             </div>
             <div class="my-3 p-3 home-section-say-message">
                 <img src="/assets/Sofia.JPG" class="rounded-circle" alt="Sofia" width="150" height="150">
