--- a/MobiV/app/views/cart/index.html.erb
+++ b/MobiV/app/views/cart/index.html.erb
@@ -1,17 +1,20 @@
 <% provide(:title, "Cart") %>
 
-<p id="notice"><%= notice %></p>
-
-<div class="container h-100 mt-3">
-  <div class="row h-100 justify-content-center align-items-center">   
+<div class="container mt-3">
+    <div class="row justify-content-center align-items-center">   
+        <div class="col-12 col-md-10 col-lg-10 mt-3">
+            <p id="notice"><%= notice %></p>
+        </div>
+    </div>
+  <div class="row justify-content-center align-items-center">   
     <div class="col-12 col-md-10 col-lg-10 mt-3">
         <table class="table table-hover">
             <thead>
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Product</th>
-                    <th scope="col">Pric</th>
-                    <th scope="col">QTY</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Quantity</th>
                     <th scope="col">Sub Total</th>
                     <th scope="col">Dec/Inc</th>
                     <th scope="col">Remove</th>
@@ -39,8 +42,8 @@
             <% session[:total_items] = totalitems %>
             <% end %>
         </table>
-        <div class="mt-3">
-            Grand Total: <%= number_to_currency(total, :unit => "€") %>
+        <div class="mt-3 mb-3">
+            <label><b>Grand Total:</b> <%= number_to_currency(total, :unit => "€") %></label>
         </div>
         <div class="mt-3">            
             <a href="/products" class="btn btn-dark">Continue Shopping</a>
