--- a/MobiV/app/views/devise/registrations/edit.html.erb
+++ b/MobiV/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Edit User") %>
 
-<div class="container h-100 mt-3">
-  <div class="row h-100 justify-content-center align-items-center">   
+<div class="container mt-3">
+  <div class="row justify-content-center align-items-center">   
     <div class="col-10 col-md-8 col-lg-6 mt-3">
       <h2>Edit <%= resource_name.to_s.humanize %></h2>
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -35,8 +35,39 @@
       <div class="mt-3">
         <h3>Cancel my account</h3>
         <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-dark' %></p>
-      </div>
-      <%= link_to "Back", :back, class: 'btn btn-black' %>
+      </div>      
     </div>
+  </div>
+  <div class="row justify-content-center align-items-center mt-3 mb-3">
+   <% if user_signed_in? %>   
+      <% purchases = session[:purchases] %>
+      <div class="col-10 col-md-8 col-lg-6 mt-3">
+        <table class="table table-hover table-sm">
+      <caption>List of purchases</caption>
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Purchase Date</th>          
+          <th scope="col">Purchase Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% purchases.each do |purchase| %>         
+          <tr>
+            <td>
+              <%= purchase.id %>
+            </td>
+            <td>
+              <%= purchase.order_date %>
+            </td> 
+            <td>
+              <%= purchase.status %>
+            </td>               
+          </tr>         
+        <% end %>
+      </tbody>
+    </table>
+   <% end %>
+   </div>
   </div>
 </div>
