--- a/MobiV/app/views/orders/index.html.erb
+++ b/MobiV/app/views/orders/index.html.erb
@@ -1,8 +1,10 @@
 <% provide(:title, "Orders") %>
-<p id="notice"><%= notice %></p>
 
 <div class="container">
-  <div class="row">
+  <div class="row mt-3 mb-3">
+   <p id="notice"><%= notice %></p>
+  </div class="row">
+  <div class="row mt-e">
     <h1>Orders</h1>
   </div class="row">
   <div class="row">
