--- a/MobiV/app/views/products/index.html.erb
+++ b/MobiV/app/views/products/index.html.erb
@@ -1,11 +1,13 @@
 <% provide(:title, "Products") %>
-<p id="notice"><%= notice %></p>
 
 <div class="container">
-  <div class="row">
+  <div class="row mt-3 mb-3">
+    <p id="notice"><%= notice %></p>
+  </div>
+  <div class="row mt-3">
     <h1>Products</h1>   
   </div>
-  <div class="row">
+  <div class="row mt-3">
     <% @products.each do |product| %>      
         <div class="card mb-3">
           <div class="row no-gutters">
